--- a/Pihlajanmarja/index.html
+++ b/Pihlajanmarja/index.html
@@ -4,44 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="Tyylit.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
-  
+    
 </head>
 
 <body>
-<!--Navigaatiopalkki-->
-<nav class="navbar navbar-expand-sm">
-  <div class="container-fluid">
-      <a class="navbar-brand" href="#">Pihlajanmarja</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-
-              <!-- Alasvetovalikko: Palvelut ja tuotteet -->
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Palvelut ja tuotteet</a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#sidonta">Sidonta ja Koristelut</a></li>
-                      <li><a class="dropdown-item" href="#lahjat">Lahjat ja tarvikkeet</a></li>
-                      <li><a class="dropdown-item" href="#kurssit">Tulevat kurssit</a></li>
-                  </ul>
-              </li>
-              <!-- Galleria -->
-              <li class="nav-item">
-                  <a class="nav-link" href="#galleria">Galleria</a>
-              </li>
-              <!-- Ota yhteyttä -->
-              <li class="nav-item">
-                  <a class="nav-link" href="#yhteyttä">Ota yhteyttä</a>
-              </li>
-          </ul>
-      </div>
-  </div>
-</nav>
+<!-- Navigaatiopalkki -->
+    <nav class="navbar navbar-expand-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Pihlajanmarja</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <!-- Alasvetovalikko: Palvelut ja tuotteet -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Palvelut ja tuotteet</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#sidonta">Sidonta ja Koristelut</a></li>
+                            <li><a class="dropdown-item" href="#lahjat">Lahjat ja tarvikkeet</a></li>
+                            <li><a class="dropdown-item" href="#kurssit">Tulevat kurssit</a></li>
+                        </ul>
+                    </li>
+                    <!-- Galleria -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#galleria">Galleria</a>
+                    </li>
+                    <!-- Ota yhteyttä -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#yhteyttä">Ota yhteyttä</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
 <!-- Takaisin ylös -ikoni -->
@@ -56,12 +55,12 @@
     </div>
   </header>
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  
 
 
 <!-- Gird/Etusivun infoa-->
 <div class="container mt-5">
-  <div class="d-flex justify-content-center align-items-center">
+  <div class="d-flex flex-column flex-md-row justify-content-center align-items-center">
     <div class="text-content text-center me-4">
       <h2>Tervetuloa Pihlajanmarjaan!</h2>
       <p class="mt-4"></p>
@@ -83,14 +82,14 @@
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 
 <!--kortit ja Grid yhdistettynä-->
 <div class="container custom-mt" id="sidonta">
   <div class="row">
     <div class="col-md-12">
       <div class="card flex-row">
-        <img src="Kuvat/pexels-nietjuh-2014698.jpg" class="card-img-left" alt="Kortin kuva"> 
+        <img src="Kuvat/pexels-nietjuh-2014698.jpg" class="card-img-left img-fluid rounded-corner" alt="Kortin kuva"> 
         <div class="card-body">
           <h5 class="card-title">Surusidonta</h5>
           <p class="card-text">Autamme suunnittelemaan vainajan näköisen siunaus- ja muistotilaisuuden. Sidomme yksilölliset hautalaitteet, 
@@ -102,7 +101,7 @@
 
     <div class="col-md-12">
       <div class="card flex-row">
-        <img src="Kuvat/pexels-inna-lesyk-67454-566450.jpg" class="card-img-left" alt="Kortin kuva">
+        <img src="Kuvat/pexels-inna-lesyk-67454-566450.jpg" class="card-img-left img-fluid rounded-corner" alt="Kortin kuva">
         <div class="card-body">
           <h5 class="card-title">Morsiussidonta</h5>
           <p class="card-text">Neljä vuoden aikaan luovat lukemattomasti mahdollisuuksia suunnitella persoonalliset hääkukat juuri teidän ihanimpaan päiväänne.</p>
@@ -112,7 +111,7 @@
 
     <div class="col-md-12">
       <div class="card flex-row">
-        <img src="Kuvat/pexels-asadphoto-169190.jpg" class="card-img-left" alt="Kortin kuva"> 
+        <img src="Kuvat/pexels-asadphoto-169190.jpg" class="card-img-left " alt="Kortin kuva"> 
         <div class="card-body">
           <h5 class="card-title">Juhlakoristelut</h5>
           <p class="card-text">Toteutamme kukka-asetelmat ja tilakoristelut kaikenlaisiin juhlatilaisuuksiin. </p>
@@ -366,7 +365,7 @@
   </div>
 </div>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
 
 <!-- JavaScript -->
 <script>
