--- a/JSON/toteutus.html
+++ b/JSON/toteutus.html
@@ -11,7 +11,7 @@
     <button onclick="navigateToKurssi()">Siirry kurssi-sivulle tästä</button>
     <script>
        
-        fetch('https://run.mocky.io/v3/7d67c4d0-50b2-4b67-8eca-f5d89edc26c3')
+        fetch('https://hannamariki.github.io/JSON/toteutus.JSON')
         .then(function(response) {
             return response.json(); 
         })
