--- a/JSON/liikennekamerat.html
+++ b/JSON/liikennekamerat.html
@@ -32,7 +32,7 @@
                     var teksti = ""; 
                     var kuva = data.presets;
 
-                for (var i = 0; i < data.length; i++){
+                for (var i = 0; i < kuva.length; i++){
 
                     teksti += "<h3>" + kuva[i].measuredTime + "</h3>";
                     teksti += "<p><img src='https://weathercam.digitraffic.fi/" + kuva[i].id + ".jpg' alt='Liikennekamera kuva'></p>";
