--- a/JSON/junat.html
+++ b/JSON/junat.html
@@ -6,17 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div id="vastaus"></div>
+        <h1>Mennäänkö junalla Tampereelle?</h1>
+        <p>Kuinka usein junia menee?</p>
         <button onclick="navigateToLiikennekamerat()">Liikennekamerat</button>
+        <div id="vastaus"></div>
+        
 
         <script>
-        fetch('https://tie.digitraffic.fi/api/weathercam/v1/stations/C04507/data')
+         fetch('https://rata.digitraffic.fi/api/v1/live-trains/station/tpe?departing_trains=10&include_nonstopping=false')
             .then(function(response) {
                 return response.json();
             })
-            .then(function(responseJson) {
-                console.log(responseJson);
-                    kerro(responseJson);
+            .then(function(data) {
+                    haeKuva(data);
             })
             .catch(function(error) {
                 document.getElementById("vastaus").innerHTML =
@@ -24,6 +26,33 @@
                     console.log(error); 
             });
             
+            function haeKuva(data){
+                var teksti = "";
+
+                for (var i = 0; i < data.length; i++){
+                    for (var j = 0; j < data[i].timeTableRows.length; j++){
+                        if (data[i].timeTableRows[j].stationShortCode=="TPE"){
+                            if (data[i].timeTableRows[j].type=="DEPARTURE"){
+                                if (data[i].trainCategory == "Long-distance"){
+                                   if (data[i].timeTableRows[0].stationShortCode =="HKI"){
+                                    var vika = data[i].timeTableRows.length - 1; 
+                                    var pvm = data[i].timeTableRows[j].scheduledTime;
+                                    var aika = pvm.substr(0, 10) + " kello: " + pvm.substr(11,5);
+
+                                    teksti += "<h4>Juna nro " + data[i].trainNumber + "</h4>";
+                                    teksti += "<p>Junan tyyppi: " + data[i].trainType + "</p>";
+                                    teksti += "<p>Lähtee Helsingistä " + lahtoaika + ". Saapuu Tampereelle " + saapumisaika + "</p>";
+
+                                   }
+                                }
+                            }
+
+
+                        }
+                    }
+                }
+                document.getElementById("vastaus").innerHTML = teksti;
+            }
 
 
 
