--- a/JSON/junat.html
+++ b/JSON/junat.html
@@ -54,14 +54,12 @@
                 document.getElementById("vastaus").innerHTML = teksti;
             }
 
-
-
-
             function navigateToLiikennekamerat() {
                 window.location.href = "liikennekamerat.html";
 }
 
         </script>
 
-
+</body>
+</html>
 
