--- a/JSON/kurssi.html
+++ b/JSON/kurssi.html
@@ -7,8 +7,9 @@
     </head>
     <body>
         <div id="vastaus"></div>
-        <button onclick="navigateToToteutus()">Siirry toteutukselle tästä</button>
+        <button onclick="navigateToToteutus()">Siirry toteutukselle tästä</button><!--navigaatiolinkki toteutus sivulle-->
         <script>
+            //haetaan JSON-tiedosto 
             fetch('https://hannamariki.github.io/JSON/kurssi.JSON')
             .then(function(response) {
                 return response.json();
@@ -22,7 +23,7 @@
                     "<p>Tietoa ei pystytä hakemaan</p>";
                     console.log(error); 
             });
-
+            //käsitellään JSON dataa ja näytetään se html sivulla
             function kerro(data){
 
                     var teksti = "<h1>" + data.otsikko + "</h1>";
@@ -31,7 +32,7 @@
                         teksti = teksti + "<h3>Opintojakso: " + data.opintojakso.nimi + " " + data.opintojakso.tunnus + " " + data.opintojakso.opintopisteet + " op"+"</h3>";
                         teksti = teksti + "<ul>"
                           
-                            for (var i = 0; i < data.sisalto.length; i++) {
+                            for (var i = 0; i < data.sisalto.length; i++) { //käydään sisältö listaa läpi
                             teksti += "<li>" + data.sisalto[i] + "</li>"
                             }
 
@@ -39,7 +40,7 @@
                             teksti += "<h3>Linkit</h3><ul>";
 
 
-                            for (var j = 0; j < data.tekniikat.length; j++) {
+                            for (var j = 0; j < data.tekniikat.length; j++) { // käydään tekniikat listaa läpi
                                 teksti += "<li>" + data.tekniikat[j].aihe + " <a href='" + data.tekniikat[j].linkki + "'>" + data.tekniikat[j].linkki + "</a></li>";
 
                             }
