--- a/JSON/tapahtumat.html
+++ b/JSON/tapahtumat.html
@@ -12,6 +12,7 @@
 <body>
     
 <script>
+    //haetaan tapahtuminen tiedot apista
      fetch('https://api.visittampere.com/api/v1/visittampere/event/published/all/?for mat=json&lang=fi')
         .then(function(response) {
             return response.json(); 
@@ -25,7 +26,7 @@
                 "<p>Tietoa ei pystytä hakemaan</p>"; 
             console.log(error); 
         });
-
+        //käsitellään tiedot ja tuodaan html sivulle
         function tapahtumat(data){
             var teksti = "";
 
