--- a/JSON/tapahtumat.html
+++ b/JSON/tapahtumat.html
@@ -4,12 +4,41 @@
         <title>Tapahtumat </title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     </head>
+<body>
+    <!--Navipalkki-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navigaatio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="kurssi.html" target="_blank">Kurssi</a> <!-- Avaa uuden välilehden -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="toteutus.html" target="_blank">Toteutus</a> <!-- Avaa uuden välilehden -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="tapahtumat.html" target="_blank">Tapahtumat</a> <!-- Avaa uuden välilehden -->
+                </li>
+                <li class="nav-item"></li>
+                    <a class="nav-link" href="saa.html" target="_blank">Sää</a> <!-- Avaa uuden välilehden -->
+                </li>
+                <li class="nav-item"></li>
+                    <a class="nav-link" href="liikennekamerat.html" target="_blank">Liikennekamerat</a> <!-- Avaa uuden välilehden -->
+                </li>
+                <li class="nav-item"></li>
+                    <a class="nav-link" href="junat.html" target="_blank">Junat</a> <!-- Avaa uuden välilehden -->
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <button onclick="navigateToSaa()">Sää</button>
     <div id="vastaus"></div>
-   
-
-<body>
     
 <script>
     //haetaan tapahtuminen tiedot apista
@@ -45,4 +74,6 @@
             }
 
 </script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </body>
