--- a/JSON/junat.html
+++ b/JSON/junat.html
@@ -9,7 +9,7 @@
     <body>
         <!--Navipalkki-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navigaatio</a>
+            <a class="navbar-brand" href="#">Oppimistehtävä 3 JSON </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,7 +39,6 @@
 
         <h1>Mennäänkö junalla Tampereelle?</h1>
         <p>Kuinka usein junia menee?</p>
-        <button onclick="navigateToLiikennekamerat()">Liikennekamerat</button> <!--navigaatio liikennekamera sivulle-->
         <div id="vastaus"></div>
         
         <script>
@@ -86,9 +85,6 @@
                 document.getElementById("vastaus").innerHTML = teksti;
             }
 
-            function navigateToLiikennekamerat() {
-                window.location.href = "liikennekamerat.html";
-            }
         </script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
