--- a/JSON/liikennekamerat.html
+++ b/JSON/liikennekamerat.html
@@ -9,7 +9,7 @@
     <body>
         <!--Navipalkki-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navigaatio</a>
+            <a class="navbar-brand" href="#">Oppimistehtävä 3 JSON </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
         </nav>
         
 
-        <button onclick="navigateToJunat()">Junat</button> <!--navigaatio junat sivulle-->
+       
         <h1>Autolla Tampereelle</h1>
         <p>Millainen keli siellä on?</p>
 
@@ -75,9 +75,6 @@
 
             }
 
-            function navigateToJunat() {
-                window.location.href = "junat.html";
-}
 
         </script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
