--- a/JSON/tapahtumat.html
+++ b/JSON/tapahtumat.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="fi">
     <head>
-        <title>Tapahtumat </title>
+        <title>Tapahtumat</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="tyylityleis.css">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     </head>
 <body>
