--- a/JSON/toteutus.html
+++ b/JSON/toteutus.html
@@ -9,8 +9,7 @@
 </head>
 <body><!--Navipalkki-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            Oppimistehtävä 3 JSON </a>
+        <a class="navbar-brand" href="#">Oppimistehtävä 3 JSON </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,13 +24,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="tapahtumat.html" target="_blank">Tapahtumat</a> 
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
                     <a class="nav-link" href="saa.html" target="_blank">Sää</a> 
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
                     <a class="nav-link" href="liikennekamerat.html" target="_blank">Liikennekamerat</a> 
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
                     <a class="nav-link" href="junat.html" target="_blank">Junat</a> 
                 </li>
             </ul>
