--- a/JSON/tapahtumat.html
+++ b/JSON/tapahtumat.html
@@ -25,13 +25,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="tapahtumat.html" target="_blank">Tapahtumat</a> 
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
                     <a class="nav-link" href="saa.html" target="_blank">Sää</a> 
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
                     <a class="nav-link" href="liikennekamerat.html" target="_blank">Liikennekamerat</a> 
                 </li>
-                <li class="nav-item"></li>
+                <li class="nav-item">
                     <a class="nav-link" href="junat.html" target="_blank">Junat</a> 
                 </li>
             </ul>
