--- a/JSON/saa.html
+++ b/JSON/saa.html
@@ -42,7 +42,7 @@
     <p>Millainen sää Helsingissä on? Entä Tampereella?</p>
 
    
-    <div class="container">
+    <div class="container-fluid">
         <div id="helsinki" class="kaupunki"> <!--asetetaan id Helsingille-->
             <h2>Helsinki</h2>
             <ul></ul>
