--- a/JSON/liikennekamerat.html
+++ b/JSON/liikennekamerat.html
@@ -17,22 +17,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="kurssi.html" target="_blank">Kurssi</a> <!-- Avaa uuden välilehden -->
+                        <a class="nav-link" href="kurssi.html" >Kurssi</a> <!-- Avaa uuden välilehden -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="toteutus.html" target="_blank">Toteutus</a> <!-- Avaa uuden välilehden -->
+                        <a class="nav-link" href="toteutus.html" >Toteutus</a> <!-- Avaa uuden välilehden -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tapahtumat.html" target="_blank">Tapahtumat</a> <!-- Avaa uuden välilehden -->
+                        <a class="nav-link" href="tapahtumat.html" >Tapahtumat</a> <!-- Avaa uuden välilehden -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="saa.html" target="_blank">Sää</a> <!-- Avaa uuden välilehden -->
+                        <a class="nav-link" href="saa.html" >Sää</a> <!-- Avaa uuden välilehden -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="liikennekamerat.html" target="_blank">Liikennekamerat</a> <!-- Avaa uuden välilehden -->
+                        <a class="nav-link" href="liikennekamerat.html" >Liikennekamerat</a> <!-- Avaa uuden välilehden -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="junat.html" target="_blank">Junat</a> <!-- Avaa uuden välilehden -->
+                        <a class="nav-link" href="junat.html" >Junat</a> <!-- Avaa uuden välilehden -->
                     </li>
                 </ul>
             </div>
