--- a/JSON/toteutus.html
+++ b/JSON/toteutus.html
@@ -16,22 +16,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="kurssi.html" target="_blank">Kurssi</a> 
+                    <a class="nav-link" href="kurssi.html" >Kurssi</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="toteutus.html" target="_blank">Toteutus</a> 
+                    <a class="nav-link" href="toteutus.html" >Toteutus</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="tapahtumat.html" target="_blank">Tapahtumat</a> 
+                    <a class="nav-link" href="tapahtumat.html" >Tapahtumat</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="saa.html" target="_blank">Sää</a> 
+                    <a class="nav-link" href="saa.html" >Sää</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="liikennekamerat.html" target="_blank">Liikennekamerat</a> 
+                    <a class="nav-link" href="liikennekamerat.html" >Liikennekamerat</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="junat.html" target="_blank">Junat</a> 
+                    <a class="nav-link" href="junat.html" >Junat</a> 
                 </li>
             </ul>
         </div>
