--- a/JSON/toteutus.html
+++ b/JSON/toteutus.html
@@ -4,7 +4,7 @@
     <title>Toteutus</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="tyylityleis.css">
+    <link rel="stylesheet" type="text/css" href="tyylit.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body><!--Navipalkki-->
