--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 
+
 <div class="p-5 bg-primary text-white text-center">
   <h1>The Metropolitan Museum of Art Collection</h1>
   <p></p>
@@ -37,6 +38,7 @@
     <div class="col-sm-8">
       <h2>Taideteokset inspiraation lähteenä</h2>
       <div class="row" id="taideteokset"></div> 
+      <button id="vaihdaTeokset" class="btn btn-primary mt-3">Vaihda teokset</button>
     </div>
   </div>
 </div>
