--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 5 Website Example</title>
+  <title>Metropolitan Museum of Art Paintings</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,10 +15,9 @@
 </head>
 <body>
 
-
 <div class="p-5 bg-primary text-white text-center">
   <h1>The Metropolitan Museum of Art Collection</h1>
-  <p></p>
+  <p>Paintings</p>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -28,79 +27,66 @@
 </nav>
 
 <div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>Sivuston esittely</h2>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <hr class="d-sm-none">
-    </div>
-
-    <div class="col-sm-8">
-      <h2>Taideteokset inspiraation lähteenä</h2>
-      <div class="row" id="taideteokset"></div> 
-      <button id="vaihdaTeokset" class="btn btn-primary mt-3">Vaihda teokset</button>
-    </div>
-  </div>
+  <div class="row" id="taideteokset"></div> 
 </div>
      
 <script>
   let teosId = [];
-fetch('https://collectionapi.metmuseum.org/public/collection/v1/search?q=paintings&hasImages=true')
-  .then(function(response) {
-    return response.json();
-  })
-  .then(function(data) {
-    teosId = data.objectIDs.slice(0, 100); // Valitaan 100 maalausta ja satunnaistetaan myöhemmin
-    satunnaisetTeokset(); // Näytetään aluksi satunnaisia
-  })
-  .catch(function(error) {
-    console.error('Virhe tiedon hakemisessa:', error);
-    document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
-  });
+  fetch('https://collectionapi.metmuseum.org/public/collection/v1/search?q=paintings&hasImages=true')
+    .then(function(response) {
+      return response.json();
+    })
+    .then(function(data) {
+      teosId = data.objectIDs.slice(0, 3); // Valitaan 3 maalausta
+      satunnaisetTeokset(); // Näytetään satunnaisia maalauksia
+    })
+    .catch(function(error) {
+      console.error('Virhe tiedon hakemisessa:', error);
+      document.getElementById("taideteokset").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
+    });
 
-function satunnaisetTeokset() {
-  const teokset = document.getElementById('taideteokset');
-  teokset.innerHTML = ''; 
+  function satunnaisetTeokset() {
+    const teokset = document.getElementById('taideteokset');
+    teokset.innerHTML = ''; 
 
-  const satunnaisID = satunnaisTeosID(); 
-  satunnaisID.forEach(id => {
-    fetch(`https://collectionapi.metmuseum.org/public/collection/v1/objects/${id}`)
-      .then(function(response) {
-        return response.json();
-      })
-      .then(function(tiedot) {
-        if (tiedot.objectName === 'Painting') { // Vain taideteokset
-          taideTeokset(tiedot);
-        }
-      })
-      .catch(function(error) { 
-        console.error('Virhe tiedon hakemisessa:', error);
-      });
-  });
-}
+    const satunnaisID = satunnaisTeosID(); 
+    satunnaisID.forEach(id => {
+      fetch(`https://collectionapi.metmuseum.org/public/collection/v1/objects/${id}`)
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(tiedot) {
+          if (tiedot.objectName === 'Painting') { // Varmistetaan, että kyseessä on maalaus
+            naytaKuva(tiedot);
+          }
+        })
+        .catch(function(error) { 
+          console.error('Virhe tiedon hakemisessa:', error);
+        });
+    });
+  }
 
-function satunnaisTeosID() { // Haetaan 5 ensimmäistä satunnaista teosta
-  const sekoitus = teosId.sort(() => 0.5 - Math.random());
-  return sekoitus.slice(0, 3);
-}
+  function satunnaisTeosID() { // Haetaan 3 ensimmäistä satunnaista teosta
+    const sekoitus = teosId.sort(() => 0.5 - Math.random());
+    return sekoitus.slice(0, 3);
+  }
 
-function taideTeokset(tiedot) { // Ota vastaan tiedot
-  const teokset = document.getElementById('taideteokset');
-  const kortti =  `
-    <div class="col-md-4">
-      <div class="card">
-        <img src="${tiedot.primaryImageSmall || 'https://via.placeholder.com/150'}" class="card-img-top" alt="${tiedot.title}">
-        <div class="card-body">
-          <h5 class="card-title">${tiedot.title}</h5>
-          <p class="card-text">Tekijä: ${tiedot.artistDisplayName || 'Tuntematon'}</p>
-        </div>
+  function naytaKuva(tiedot) { // Näytetään vain kuva
+    const teokset = document.getElementById('taideteokset');
+    const kuvaHtml = `
+      <div class="col-md-4">
+        <img src="${tiedot.primaryImageSmall || 'https://via.placeholder.com/150'}" class="img-fluid" alt="Painting">
       </div>
-    </div>
-  `;
-  teokset.innerHTML += kortti; // Lisää kortti konttiin
-}
+    `;
+    teokset.innerHTML += kuvaHtml; // Lisää kuva konttiin
+  }
+</script>
+      
+<div class="mt-5 p-4 bg-dark text-white text-center">
+  <div class="text-center p-3">
+    © 2024 MET Art Gallery | Powered by MET Collection API
+  </div>
+</div>
 
-
-document.getElementById('vaihdaTeokset').addEventListener('click', function() {
-  satunnaisetTeokset(); 
-});
+</body>
+</html>
