--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -6,12 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-    .fakeimg {
-      height: 200px;
-      background: #aaa;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="tyylit.css">
+
+
 </head>
 <body>
 
@@ -26,7 +23,16 @@
   </div>
 </nav>
 
-<div class="container mt-5">
+<div class="container mt-5"></div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h2>Sivuston esittely</h2>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <hr class="d-sm-none">
+    </div>
+
+<div class="col-sm-8">
+  <h2>Taideteokset inspiraation lähteenä</h2>
   <div class="row" id="taideteokset"></div> 
 </div>
      
@@ -80,6 +86,10 @@
     `;
     teokset.innerHTML += kuvaHtml; // Lisää kuva konttiin
   }
+
+  document.getElementById('vaihdaTeokset').addEventListener('click', function() {
+    satunnaisetTeokset(); // Vaihda teokset
+  });
 </script>
       
 <div class="mt-5 p-4 bg-dark text-white text-center">
