--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -34,6 +34,7 @@
 <div class="col-sm-8">
   <h2>Taideteokset inspiraation lähteenä</h2>
   <div class="row" id="taideteokset"></div> 
+  <button id="vaihdaTeokset" class="btn btn-primary mt-3">Vaihda teokset</button>
 </div>
      
 <script>
