--- a/MetropolitanMuseum/museum.html
+++ b/MetropolitanMuseum/museum.html
@@ -85,7 +85,7 @@
     const kortti =  `
     <div class="col-md-4">
       <div class="card">
-        <img src="${tiedot.primaryImageSmall || 'Ei kuvaa'}" class="card-img-top" alt="${tiedot.title}">
+        <img src="${tiedot.primaryImageSmall || 'https://via.placeholder.com/150?text=Ei+Kuvaa'}" class="card-img-top" alt="${tiedot.title}">
         <div class="card-body">
           <h5 class="card-title">${tiedot.title}</h5>
           <p class="card-text">Tekijä: ${tiedot.artistDisplayName}</p>
